--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shivankarnodepkg",
+  "name": "shivankarnodepkg1",
   "version": "1.0.0",
   "description": "For learning",
   "main": "index.js",
